# django5

./: .env  .gitignore  Dockerfile  README.md  celery-Dockerfile  db.sqlite3  docker-compose.yml  gf.g  helper.py  package-lock.json  pyproject.toml  requirements.txt  setup.cfg  start.sh
.github/workflows/: dev.yml  main.yml
authentication/: authentication_class.py  serilizers.py  urls.py  views.py
backend/: .env  Dockerfile  celery.py  docker-compose.yml  docs-Dockerfile  helper.py  manage.py  mkdocs.yml  pyproject.toml  requirements.txt  settings.py  setup.cfg  start.sh  urls.py
backend/authentication/: authentication_class.py  serilizers.py  urls.py  views.py
backend/backend/: celery.py  settings.py  urls.py
backend/base/: celery.py  models.py  tasks.py  urls.py
backend/base/migrations/: 0001_initial.py  0002_alter_post_feed.py  0002_remove_post_user.py  0003_alter_feed_fails_alter_feed_followed_and_more.py  0004_post_followed_post_readed.py  0005_alter_feed_followed.py
backend/base/serializers/: serilizers.py
backend/base/tests/: test_main_background_task.py  tests.py
backend/base/views/: api.py
backend/docs/: index.md  logic.md  ref.md
backend/sendcld/: asgi.py  settings.py  urls.py  wsgi.py
base/: permissions.py  tasks.py
base/serializers/: serilizers.py
base/tests/: test_others.py
base_api/: models.py
base_api/migrations/: 0001_initial.py
docs/: index.md  ref.md
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: CreateForm.tsx  Menu.tsx  Table.tsx
frontend/app/feeds/: page.tsx
rss_parser/: admin.py  apps.py  models.py  tasks.py  urls.py
rss_parser/migrations/: 0001_initial.py
rss_parser/serializers/: __init__.py  serilizers.py
rss_parser/tests/: __init__.py  helper.py  test_base_api.py  test_main_background_task.py  xtest_original.py  xtest_others.py
rss_parser/views/: api.py
(+14 files in other folders)
