[tool.poetry]
name = "backend"
version = "0.1.0"
description = "A feed parser app written with Python and Django"
authors = ["Payam"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
djangorestframework = "^3"
django-extensions = "^3"
django-filter = "^23"
psycopg = "^3"
redis = "^4"
gunicorn = "^21"
celery = "^5"
python-dotenv = "^1"
requests = "^2"
feedparser = "^6"
drf-spectacular = "^0.26"
django-cors-headers = "^4"
eventlet = "^0.33"
djangorestframework-simplejwt = "^5"
PyJWT = "^2"

[tool.poetry.group.lint.dependencies]
black = "^23"
flake8 = "^6"
celery-stubs = "^0.1"
django-stubs = "^4"
djangorestframework-stubs = "^3"
isort = "^5"
mypy = "^1"

[tool.poetry.group.doc.dependencies]
mkdocstrings = "^0.22"
mkdocs = "^1"
mkdocs-material = "^9"
mkdocstrings-python = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
